force-app/main/default/objects/PMHR_Pokemon__c/PMHR_Pokemon__c.object-meta.xml
<CustomObject>
    <label>Pokemon</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pokemons</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>