force-app/main/default/objects/PMHR_Pokemon__c/fields/CatchMethod__c.field-meta.xml
<CustomField>
    <fullName>CatchMethod__c</fullName>
    <label>Catch Method</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Breeding</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Fossil</fullName>
            </value>
            <value>
                <fullName>GameCorner</fullName>
                <label>Game Corner</label>
            </value>
            <value>
                <fullName>Grass</fullName>
            </value>
            <value>
                <fullName>Overworld</fullName>
            </value>
            <value>
                <fullName>Starter</fullName>
            </value>
            <value>
                <fullName>Trade</fullName>
            </value>
            <value>
                <fullName>Tree</fullName>
            </value>
            <value>
                <fullName>Water</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>