force-app/main/default/objects/PMHR_Pokemon__c/fields/CaughtForm__c.field-meta.xml
<CustomField>
    <fullName>CaughtForm__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Caught Form</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>PMHR_PokemonData__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Form</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>PMHR_PokemonData__c</referenceTo>
    <relationshipLabel>Pokemons (Caught)</relationshipLabel>
    <relationshipName>CaughtPokemons</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>