force-app/main/default/objects/PMHR_Pokemon__c/fields/CauseOfDeath__c.field-meta.xml
<CustomField>
    <fullName>CauseOfDeath__c</fullName>
    <label>Cause of Death</label>
    <length>255</length>
    <type>Text</type>
</CustomField>