force-app/main/default/objects/PMHR_Pokemon__c/fields/DeathLevel__c.field-meta.xml
<CustomField>
    <fullName>DeathLevel__c</fullName>
    <label>Death Level</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>