force-app/main/default/objects/PMHR_Pokemon__c/fields/Form__c.field-meta.xml
<CustomField>
    <fullName>Form__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>If you&apos;re creating a new Pokemon this field will be filled automatically</inlineHelpText>
    <label>Form</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>PMHR_PokemonData__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Form</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>PMHR_PokemonData__c</referenceTo>
    <relationshipLabel>Pokemons</relationshipLabel>
    <relationshipName>Pokemons</relationshipName>
    <type>Lookup</type>
</CustomField>