force-app/main/default/objects/PMHR_Pokemon__c/fields/IsDeceased__c.field-meta.xml
<CustomField>
    <fullName>IsDeceased__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deceased</label>
    <type>Checkbox</type>
</CustomField>