force-app/main/default/objects/PMHR_Pokemon__c/fields/Nuzlocke__c.field-meta.xml
<CustomField>
    <fullName>Nuzlocke__c</fullName>
    <label>Nuzlocke</label>
    <referenceTo>PMHR_Nuzlocke__c</referenceTo>
    <relationshipLabel>Pokemons</relationshipLabel>
    <relationshipName>Pokemons</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>