force-app/main/default/objects/PMHR_Pokemon__c/validationRules/Death_Info_While_Alive.validationRule-meta.xml
<ValidationRule>
    <fullName>Death_Info_While_Alive</fullName>
    <active>true</active>
    <description>You can&apos;t provide death information while Pokemon is alive.</description>
    <errorConditionFormula>AND(
 NOT(IsDeceased__c),
 OR(
  NOT(ISBLANK(DeathLevel__c)),
  NOT(ISBLANK(CauseOfDeath__c))
 )
)</errorConditionFormula>
    <errorMessage>You can&apos;t provide death information while Pokemon is alive.</errorMessage>
</ValidationRule>