force-app/main/default/objects/PMHR_Pokemon__c/validationRules/Form_Wrong_Family.validationRule-meta.xml
<ValidationRule>
    <fullName>Form_Wrong_Family</fullName>
    <active>true</active>
    <description>The Pokemon form must be related to the caught Pokemon.</description>
    <errorConditionFormula>TEXT(CaughtForm__r.Family__c) &lt;&gt; TEXT(Form__r.Family__c)</errorConditionFormula>
    <errorDisplayField>Form__c</errorDisplayField>
    <errorMessage>The Pokemon form must be related to the caught Pokemon.</errorMessage>
</ValidationRule>