force-app/main/default/objects/PMHR_Pokemon__c/validationRules/Form_Wrong_Stage.validationRule-meta.xml
<ValidationRule>
    <fullName>Form_Wrong_Stage</fullName>
    <active>true</active>
    <description>The Pokemon form stage cannot be lower than caught form stage.</description>
    <errorConditionFormula>CaughtForm__r.FamilyStage__c &gt; Form__r.FamilyStage__c</errorConditionFormula>
    <errorDisplayField>Form__c</errorDisplayField>
    <errorMessage>The Pokemon form stage cannot be lower than caught form stage.</errorMessage>
</ValidationRule>