force-app/main/default/objects/PMHR_Pokemon__c/validationRules/Invalid_Death_Level.validationRule-meta.xml
<ValidationRule>
    <fullName>Invalid_Death_Level</fullName>
    <active>true</active>
    <description>Death level must be in range 1-100.</description>
    <errorConditionFormula>AND(
 IsDeceased__c,
 OR(
  DeathLevel__c &lt; 1,
  DeathLevel__c &gt; 100
 )
)</errorConditionFormula>
    <errorDisplayField>DeathLevel__c</errorDisplayField>
    <errorMessage>Death level must be in range 1-100.</errorMessage>
</ValidationRule>