force-app/main/default/objects/PMHR_Pokemon__c/validationRules/Nuzlocke_Finished.validationRule-meta.xml
<ValidationRule>
    <fullName>Nuzlocke_Finished</fullName>
    <active>true</active>
    <description>You can&apos;t add new Pokemon to finished Nuzlocke.</description>
    <errorConditionFormula>AND(
 ISNEW(),
 Nuzlocke__r.IsFinished__c
)</errorConditionFormula>
    <errorMessage>You can&apos;t add new Pokemon to finished Nuzlocke.</errorMessage>
</ValidationRule>