force-app/main/default/objects/PMHR_Pokemon__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Form__c</columns>
    <columns>Gender__c</columns>
    <columns>Location__c</columns>
    <columns>CatchMethod__c</columns>
    <columns>IsDeceased__c</columns>
    <columns>DeathLevel__c</columns>
    <columns>CauseOfDeath__c</columns>
    <columns>Nuzlocke__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>All</label>
</ListView>