force-app/main/default/objects/PMHR_Pokemon__c/listViews/All_Dead.listView-meta.xml
<ListView>
    <fullName>All_Dead</fullName>
    <columns>NAME</columns>
    <columns>Form__c</columns>
    <columns>Gender__c</columns>
    <columns>Trainer__c</columns>
    <columns>IsDeceased__c</columns>
    <columns>DeathLevel__c</columns>
    <columns>CauseOfDeath__c</columns>
    <columns>Nuzlocke__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>IsDeceased__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Dead</label>
</ListView>